enumerator done, updated queue

--- a/src/NCollections/NCollections.csproj
+++ b/src/NCollections/NCollections.csproj
@@ -6,4 +6,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    </ItemGroup>
+
 </Project>
